Full screen on mobile fix

--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -1,10 +1,12 @@
 .container {
-  height: 100%;
+  /* height: 100%; */
   width: 100%;
   position: absolute;
   top: 0;
   left: 0;
   z-index: -1;
+  height: 100dvh; /* Use dynamic viewport height */
+  min-height: 100svh; /* Ensure it adapts to small viewport */
 }
 
 .caption {
